Fixed jumpbox popup styling to use javascript offsets to calculate the position properly (was broken on firefox, ie and chrome with html5). Style now adds invisible border to bottom of tool links, and jumpbox 2px margin is removed, to allow conventional use across different cases

--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -27,6 +27,8 @@
 .subtitle_tools {
   font-size: 11px;
   float: right; }
+  .subtitle_tools a {
+    border-bottom: 2px solid white; }
 
 .radio_box {
   line-height: 20px; }
