--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -84,7 +84,6 @@ tt {
       -webkit-border-top-right-radius: 2px; }
   #header #jumpbox {
     background: steelblue;
-    margin: 2px 0px 0px 0px;
     padding: 12px;
     position: absolute;
     -moz-border-radius-bottomleft: 6px;
@@ -102,6 +101,8 @@ tt {
       color: white; }
     #header #jumpbox input {
       margin: 2px 0px 0px 0px; }
+    #header #jumpbox input#auto_complete_query {
+      width: 310px; }
 
 #tabs {
   background: #330000;
@@ -169,6 +170,8 @@ tt {
 .subtitle_tools {
   font-size: 11px;
   float: right; }
+  .subtitle_tools a {
+    border-bottom: 2px solid white; }
 
 .radio_box {
   line-height: 20px; }
